--- a/src/droidplug/java/build.gradle
+++ b/src/droidplug/java/build.gradle
@@ -36,5 +36,5 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.gedgygedgy.rust:jni-utils:0.1.0-SNAPSHOT'
+    implementation files('../../../jni-utils-rs/java/build/libs/jni-utils-0.1.0-SNAPSHOT.jar')
 }
